crates/voksa-core/tests/snapshots/schedule_compiler__snapshot_mi_klama.snap
---
source: crates/voksa-core/tests/schedule_compiler.rs
expression: "compiled(\"mi klama\")"
---
UtteranceSchedule {
    events: [
        Event {
            at_ms: 0.0,
            transition_ms: 32.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 300.0,
                            bw_hz: 100.0,
                            amp: 1.0,
                        },
                        Formant {
                            freq_hz: 1000.0,
                            bw_hz: 150.0,
                            amp: 0.1,
                        },
                        Formant {
                            freq_hz: 2200.0,
                            bw_hz: 200.0,
                            amp: 0.05,
                        },
                    ],
                    voicing: 1.0,
                    aspiration: 0.0,
                },
                oq: 1.0,
                tilt: 0.0,
                di: 0.0,
                vibrato_hz: 0.0,
                flutter: 0.0,
            },
            micro: Sonorant,
        },
        Event {
            at_ms: 80.0,
            transition_ms: 35.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 270.0,
                            bw_hz: 90.0,
                            amp: 1.0,
                        },
                        Formant {
                            freq_hz: 2290.0,
                            bw_hz: 110.0,
                            amp: 0.7,
                        },
                        Formant {
                            freq_hz: 3010.0,
                            bw_hz: 150.0,
                            amp: 0.45,
                        },
                    ],
                    voicing: 1.0,
                    aspiration: 0.0,
                },
                oq: 1.0,
                tilt: 0.0,
                di: 0.0,
                vibrato_hz: 0.0,
                flutter: 0.0,
            },
            micro: Vowel(
                High,
            ),
        },
        Event {
            at_ms: 230.0,
            transition_ms: 20.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 500.0,
                            bw_hz: 90.0,
                            amp: 0.0,
                        },
                        Formant {
                            freq_hz: 1500.0,
                            bw_hz: 110.0,
                            amp: 0.0,
                        },
                        Formant {
                            freq_hz: 2500.0,
                            bw_hz: 150.0,
                            amp: 0.0,
                        },
                    ],
                    voicing: 0.0,
                    aspiration: 0.0,
                },
                oq: 1.0,
                tilt: 0.0,
                di: 0.0,
                vibrato_hz: 0.0,
                flutter: 0.0,
            },
            micro: VoicelessObstruent,
        },
        Event {
            at_ms: 290.0,
            transition_ms: 5.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 500.0,
                            bw_hz: 90.0,
                            amp: 0.0,
                        },
                        Formant {
                            freq_hz: 1500.0,
                            bw_hz: 110.0,
                            amp: 0.0,
                        },
                        Formant {
                            freq_hz: 2150.0,
                            bw_hz: 500.0,
                            amp: 0.85,
                        },
                    ],
                    voicing: 0.0,
                    aspiration: 1.0,
                },
                oq: 1.0,
                tilt: 0.0,
                di: 0.0,
                vibrato_hz: 0.0,
                flutter: 0.0,
            },
            micro: VoicelessObstruent,
        },
        Event {
            at_ms: 315.0,
            transition_ms: 32.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 360.0,
                            bw_hz: 90.0,
                            amp: 1.0,
                        },
                        Formant {
                            freq_hz: 1300.0,
                            bw_hz: 110.0,
                            amp: 0.5,
                        },
                        Formant {
                            freq_hz: 2700.0,
                            bw_hz: 150.0,
                            amp: 0.2,
                        },
                    ],
                    voicing: 1.0,
                    aspiration: 0.0,
                },
                oq: 1.0,
                tilt: 0.0,
                di: 0.0,
                vibrato_hz: 0.0,
                flutter: 0.0,
            },
            micro: Sonorant,
        },
        Event {
            at_ms: 395.0,
            transition_ms: 35.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 730.0,
                            bw_hz: 90.0,
                            amp: 1.0,
                        },
                        Formant {
                            freq_hz: 1090.0,
                            bw_hz: 110.0,
                            amp: 0.8,
                        },
                        Formant {
                            freq_hz: 2440.0,
                            bw_hz: 150.0,
                            amp: 0.3,
                        },
                    ],
                    voicing: 1.0,
                    aspiration: 0.0,
                },
                oq: 1.0,
                tilt: 0.0,
                di: 0.0,
                vibrato_hz: 0.0,
                flutter: 0.0,
            },
            micro: Vowel(
                Low,
            ),
        },
        Event {
            at_ms: 555.0,
            transition_ms: 32.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 300.0,
                            bw_hz: 100.0,
                            amp: 1.0,
                        },
                        Formant {
                            freq_hz: 1000.0,
                            bw_hz: 150.0,
                            amp: 0.1,
                        },
                        Formant {
                            freq_hz: 2200.0,
                            bw_hz: 200.0,
                            amp: 0.05,
                        },
                    ],
                    voicing: 1.0,
                    aspiration: 0.0,
                },
                oq: 1.0,
                tilt: 0.0,
                di: 0.0,
                vibrato_hz: 0.0,
                flutter: 0.0,
            },
            micro: Sonorant,
        },
        Event {
            at_ms: 635.0,
            transition_ms: 35.0,
            frame: Frame {
                f0_hz: 120.0,
                targets: Targets {
                    formants: [
                        Formant {
                            freq_hz: 730.0,
                            bw_hz: 90.0,
                            amp: 1.0,
                        },
                        Formant {
                            freq_hz: 1090.0,
                            bw_hz: 110.0,
                            amp: 0.8,
                        },
                        Formant {
                            freq_hz: 2440.0,
                            bw_hz: 150.0,
                            amp: 0.3,
                        },
                    ],
                    voicing: 1.0,
                    aspiration: 0.0,
                },
                oq: 1.0,
                tilt: 0.0,
                di: 0.0,
                vibrato_hz: 0.0,
                flutter: 0.0,
            },
            micro: Vowel(
                Low,
            ),
        },
    ],
    spans: [
        SyllableSpan {
            start_ms: 0.0,
            dur_ms: 230.0,
            nucleus_off_ms: 80.0,
            word_index: 0,
            stressed: false,
            countable: true,
            onset_count: 1,
            coda_count: 0,
        },
        SyllableSpan {
            start_ms: 230.0,
            dur_ms: 325.0,
            nucleus_off_ms: 165.0,
            word_index: 1,
            stressed: true,
            countable: true,
            onset_count: 2,
            coda_count: 0,
        },
        SyllableSpan {
            start_ms: 555.0,
            dur_ms: 240.0,
            nucleus_off_ms: 80.0,
            word_index: 1,
            stressed: false,
            countable: true,
            onset_count: 1,
            coda_count: 0,
        },
    ],
    total_ms: 795.0,
    attitudinals: [],
}
